Add live-iso option to Image's DiskFormat in v1a5 and v1b1
The image.format option of 'live-iso' was available in the v1alpha4 API
but had gone missing in the v1alpha5 and v1beta1 APIs.

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -510,6 +510,7 @@ spec:
                     - qcow2
                     - vdi
                     - vmdk
+                    - live-iso
                     type: string
                   url:
                     description: URL is a location of an image to deploy.
@@ -858,6 +859,7 @@ spec:
                     - qcow2
                     - vdi
                     - vmdk
+                    - live-iso
                     type: string
                   url:
                     description: URL is a location of an image to deploy.
