--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -367,6 +367,7 @@ spec:
                             - qcow2
                             - vdi
                             - vmdk
+                            - live-iso
                             type: string
                           url:
                             description: URL is a location of an image to deploy.
@@ -575,6 +576,7 @@ spec:
                             - qcow2
                             - vdi
                             - vmdk
+                            - live-iso
                             type: string
                           url:
                             description: URL is a location of an image to deploy.
