pin IPA version to avoid incompatibility with BMO 0.6
This commit:
  - Pins the IPA image to an instance that is provided by
    the metal3-io community.
  - The pinning is done in order to avoid incompatibility issues between
    newer IPA images and BMO 0.6 .

Signed-off-by: Adam Rozman <adam.rozman@est.tech>

--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -166,6 +166,9 @@ variables:
   IMAGE_CHECKSUM_TYPE: "sha256"
   IMAGE_USERNAME: "metal3"
   NODE_DRAIN_TIMEOUT: "0s"
+  IPA_BASEURI: "https://artifactory.nordix.org/artifactory/metal3/images/ipa/pinned/centos/9-stream/20240513T0408Z-c303bd9"
+  IPA_BRANCH: "master"
+  IPA_FLAVOR: "centos9"
 
 intervals:
   default/wait-controllers: ["5m", "10s"]
