--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clustertemplates.yaml
@@ -51,6 +51,13 @@ spec:
                   spec:
                     description: Metal3ClusterSpec defines the desired state of Metal3Cluster.
                     properties:
+                      cloudProviderEnabled:
+                        default: true
+                        description: |-
+                          Determines if the cluster is to be deployed with an external cloud provider.
+                          If set to false, CAPM3 will use node labels to set providerID on the kubernetes nodes.
+                          If set to true, providerID is set on nodes by other entities and CAPM3 uses the value of the providerID on the m3m resource.
+                        type: boolean
                       controlPlaneEndpoint:
                         description: ControlPlaneEndpoint represents the endpoint
                           used to communicate with the control plane.
@@ -72,6 +79,8 @@ spec:
                           Determines if the cluster is not to be deployed with an external cloud provider.
                           If set to true, CAPM3 will use node labels to set providerID on the kubernetes nodes.
                           If set to false, providerID is set on nodes by other entities and CAPM3 uses the value of the providerID on the m3m resource.
+
+                          Deprecated: This field is deprecated, use cloudProviderEnabled instead
                         type: boolean
                     type: object
                 required:
