Add ironic secrets files and junit e2e result file to gitignore
Signed-off-by: Huy Mai <huy.mai@est.tech>

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ go.work.sum
 
 # Development containers (https://containers.dev/)
 .devcontainer
+
+# e2e result junit xml files
+junit.e2e_suite.*.xml
