--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -243,6 +243,8 @@ variables:
   KUBERNETES_VERSION: "v1.32.0"
   CONTROL_PLANE_MACHINE_COUNT: 3
   WORKER_MACHINE_COUNT: 1
+  NUM_NODES: 4
+  SCALE_SPEC_CONCURRENCY: 10
   APIVersion: "infrastructure.cluster.x-k8s.io/${CAPM3_VERSION}"
   IRONIC_NAMESPACE: "baremetal-operator-system"
   NAMEPREFIX: "baremetal-operator"
