--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3datas.yaml
@@ -171,10 +171,8 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               templateReference:
-                description: |-
-                  TemplateReference refers to the Template the Metal3MachineTemplate refers to.
-                  It can be matched against the key or it may also point to the name of the template
-                  Metal3Data refers to
+                description: 'Deprecated: This field is deprecated and will be removed
+                  in a future release.'
                 type: string
             required:
             - claim
