--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -158,6 +158,19 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.5/metadata.yaml"
+- name: metal3
+  type: IPAMProvider
+  versions:
+  - name: "v1.10.0-beta.0"
+    value: "https://github.com/metal3-io/ip-address-manager/releases/download/v1.10.0-beta.0/ipam-components.yaml"
+    type: "url"
+    contract: v1beta1
+    replacements:
+    - old: --metrics-addr=127.0.0.1:8080
+      new: --metrics-addr=:8080
+    files:
+    - sourcePath: "../data/infrastructure-metal3/main/metadata.yaml"
+      targetName: "metadata.yaml"
 
 - name: metal3
   type: InfrastructureProvider
